# trie-hard

./: .bleep  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  build.yml  docs.yml  semgrep.yml
benches/: bench.rs  criterion_bench.rs  divan_bench.rs
data/: 1984.txt  headers.txt  random.txt  sun-rising.txt
src/: lib.rs  u256.rs
