[package]
name = "trie-hard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/trie-hard"
categories = ["data-structures"]
keywords = ["trie", "prefix-search"]
description = """
Fast implementation of a trie data structure
"""

[dev-dependencies]
rstest = "0.22.0"
criterion = "0.5.1"
radix_trie = "0.2.1"
paste = "1.0.15"
once_cell = "1.19.0"

[[bench]]
name = "bench"
harness = false

