[package]
name = "trie-hard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/trie-hard"
categories = ["data-structures"]
keywords = ["trie", "prefix-search"]
description = """
Fast implementation of a trie data structure
"""

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.14"
once_cell = "1.19.0"
paste = "1.0.15"
phf = { version = "0.11.2", default-features = false }
radix_trie = "0.2.1"
rstest = "0.22.0"

[[bench]]
name = "bench"
harness = false

[build-dependencies]
phf_codegen = "0.11.2"
